[GTK][WPE] Fix BubblewrapLauncher clang warnings https://bugs.webkit.org/show_bug.cgi?id=192086

Reviewed by Michael Catanzaro.

* UIProcess/Launcher/glib/BubblewrapLauncher.cpp:
(WebKit::bindPathVar): Initialize the i variable to 0.
(WebKit::setupSeccomp): Initialize the optional datum_b member.


Canonical link: https://commits.webkit.org/206813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238663 268f45cc-cd09-0410-ab3c-d52691b4dbfc