Source/WebKit/UIProcess/Launcher/glib/BubblewrapLauncher.cpp
@@ -471,7 +471,7 @@ static bool bindPathVar(Vector<CString>& args, const char* varname)
         return false;
 
     GUniquePtr<char*> splitPaths(g_strsplit(pathValue, ":", -1));
-    for (size_t i; splitPaths.get()[i]; ++i)
+    for (size_t i = 0; splitPaths.get()[i]; ++i)
         bindIfExists(args, splitPaths.get()[i]);
 
     return true;
@@ -571,7 +571,7 @@ static int setupSeccomp()
     //  https://git.gnome.org/browse/linux-user-chroot
     //    in src/setup-seccomp.c
     struct scmp_arg_cmp cloneArg = SCMP_A0(SCMP_CMP_MASKED_EQ, CLONE_NEWUSER, CLONE_NEWUSER);
-    struct scmp_arg_cmp ttyArg = SCMP_A1(SCMP_CMP_EQ, (int)TIOCSTI);
+    struct scmp_arg_cmp ttyArg = SCMP_A1(SCMP_CMP_EQ, static_cast<scmp_datum_t>(TIOCSTI), static_cast<scmp_datum_t>(0));
     struct {
         int scall;
         struct scmp_arg_cmp* arg;
